--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -1,16 +1,18 @@
-# Use the official Nginx image from Docker Hub as the base image
-FROM nginx:latest
+FROM public.ecr.aws/amazonlinux/amazonlinux:latest
 
-# Copy your custom Nginx configuration file (if any) to the container
-# Replace 'default.conf' with the name of your configuration file
-COPY default.conf /etc/nginx/conf.d/default.conf
+# Install dependencies
+RUN yum update -y && \
+ yum install -y httpd
 
-# Copy website static files to the container's web root directory
-# Replace 'html' with the path to your local static files
-COPY html /usr/share/nginx/html
+# Install apache and write hello world message
+RUN echo 'Hello World!' > /var/www/html/index.html
 
-# Expose port 80 to make the web server accessible
+# Configure apache
+RUN echo 'mkdir -p /var/run/httpd' >> /root/run_apache.sh && \
+ echo 'mkdir -p /var/lock/httpd' >> /root/run_apache.sh && \
+ echo '/usr/sbin/httpd -D FOREGROUND' >> /root/run_apache.sh && \
+ chmod 755 /root/run_apache.sh
+
 EXPOSE 80
 
-# Command to start Nginx (this is the default CMD in the base image)
-CMD ["nginx", "-g", "daemon off;"]
+CMD /root/run_apache.sh
