--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,6 +7,10 @@ phases:
       # - echo $GITHUB_TOKEN
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+  install:
+    commands:
+      - echo "Listing source artifact contents..."
+      - ls -R $CODEBUILD_SRC_DIR
   build:
     commands:
       - echo Building the Docker image...
