--- a/src/Dockerfile-lambda
+++ b/src/Dockerfile-lambda
@@ -1,7 +1,9 @@
 FROM public.ecr.aws/lambda/python:3.12
 
 # Copy requirements.txt
-COPY requirements.txt ${LAMBDA_TASK_ROOT}
+COPY ./src/requirements.txt ${LAMBDA_TASK_ROOT}
+COPY ./src/main.py ${LAMBDA_TASK_ROOT}
+
 
 # Install the specified packages
 RUN pip install -r requirements.txt
@@ -10,4 +12,4 @@ RUN pip install -r requirements.txt
 COPY main.py ${LAMBDA_TASK_ROOT}
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
-CMD [ "main.lambda_handler" ]
+CMD [ "main.handler" ]
