--- a/src/Dockerfile-lambda
+++ b/src/Dockerfile-lambda
@@ -1,8 +1,8 @@
 FROM public.ecr.aws/lambda/python:3.12
 
 # Copy requirements.txt
-COPY ./src/requirements.txt ${LAMBDA_TASK_ROOT}
-COPY ./src/main.py . ${LAMBDA_TASK_ROOT}
+COPY ./src/requirements.txt ${LAMBDA_TASK_ROOT}/requirements.txt 
+COPY ./src/main.py  ${LAMBDA_TASK_ROOT}/main.py
 
 # Install the specified packages
 RUN pip install -r requirements.txt
