--- a/src/Dockerfile-lambda
+++ b/src/Dockerfile-lambda
@@ -8,4 +8,4 @@ COPY ./src/main.py  ${LAMBDA_TASK_ROOT}/main.py
 RUN pip install -r requirements.txt
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
-CMD [ "main.handler" ]
+CMD [ "main.lambda_handler" ]
